[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/harvey/items/Tool.gd" type="Script" id=1]
[ext_resource path="res://src/harvey/ToolIcon.tscn" type="PackedScene" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 7.0

[sub_resource type="CircleShape2D" id=2]
radius = 22.0227

[node name="Tool" type="KinematicBody2D" groups=["poi"]]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ToolIcon" parent="." instance=ExtResource( 2 )]
animation = "watering-pail"

[node name="Detectbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detectbox"]
shape = SubResource( 2 )

[connection signal="body_entered" from="Detectbox" to="." method="_on_Detectbox_body_entered"]
[connection signal="body_exited" from="Detectbox" to="." method="_on_Detectbox_body_exited"]
